test_regress/t/t_inside_unbounded_both_bad.out
%Warning-INSIDETRUE: t/t_inside_unbounded_both.v:12:25: Unbounded on both sides of inside range [$:$] is always true
   12 |     if (!(value inside {[$ : $]})) $stop;
      |                         ^
                     ... For warning description see https://verilator.org/warn/INSIDETRUE?v=latest
                     ... Use "/* verilator lint_off INSIDETRUE */" and lint_on around source to disable this message.
%Error: Exiting due to
